--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <body> 
   <h1>austin</h1>
-  <h2><a href= "https://github.com/studzic">Github</a></h2>
+  <h2><a href= "https://github.com/dudzic">Github</a></h2>
   </body>
   </html>
     
